--- a/app/src/main/res/layout/fragment_bill_history.xml
+++ b/app/src/main/res/layout/fragment_bill_history.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <import type="com.kreativesquadz.billkit.adapter.BindingAdaptersKt"/>
         <variable
@@ -46,6 +47,7 @@
 
             </LinearLayout>
             <ImageView
+                android:id="@+id/searchInvoice"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="@dimen/_10dp"
@@ -72,7 +74,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lineView"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:listitem="@layout/item_bill_invoice_history"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 <LinearLayout
