--- a/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
+++ b/app/src/main/res/layout/fragment_tax_for_quick_sell.xml
@@ -3,20 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <variable
+            name="isUpdateEnabled"
+            type="Boolean" />
 
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/_10dp"
         android:orientation="vertical">
         <TextView
             android:fontFamily="@font/montserrat_medium"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10dp"
+            android:layout_marginStart="@dimen/_20dp"
+            android:layout_marginEnd="@dimen/_20dp"
             android:layout_marginBottom="@dimen/_10dp"
             android:textSize="@dimen/txt_16sp"
             android:layout_marginTop="@dimen/_20dp"
@@ -27,7 +30,10 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_10dp"
+            android:layout_marginTop="@dimen/_10dp"
+            android:layout_marginBottom="@dimen/_10dp"
+            android:layout_marginEnd="@dimen/_20dp"
+            android:layout_marginStart="@dimen/_20dp"
             android:id="@+id/taxView"
             >
 
@@ -44,6 +50,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/recyclerView"
+            android:layout_marginEnd="@dimen/_20dp"
+            android:layout_marginStart="@dimen/_20dp"
             android:nestedScrollingEnabled="false"
             tools:listitem="@layout/item_tax_add_products"
             tools:itemCount="1" />
@@ -55,9 +63,12 @@
             app:cardCornerRadius="@dimen/_5dp"
             app:cardUseCompatPadding="true"
             android:textStyle="bold"
-            android:layout_marginStart="@dimen/_10dp"
-            app:cardBackgroundColor="@color/colorPrimaryDark"
+            android:layout_marginEnd="@dimen/_20dp"
+            android:layout_marginStart="@dimen/_20dp"
+            android:layout_marginTop="@dimen/_10dp"
+            app:cardBackgroundColor="@{isUpdateEnabled ? @color/colorPrimary : @color/lite_grey_200}"
             android:textColor="@color/text_color_heading"
+            tools:cardBackgroundColor="@color/colorPrimary"
             android:gravity="center">
 
             <TextView android:fontFamily="@font/montserrat_regular"
