--- a/app/src/main/res/layout/fragment_day_book.xml
+++ b/app/src/main/res/layout/fragment_day_book.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <data>
+    <import type="android.view.View"/>
+    <variable
+        name="isLoading"
+        type="Boolean" />
 
 </data>
 
@@ -59,24 +63,50 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/_10dp"
-                    android:src="@android:drawable/stat_sys_download"
-                    app:tint="@color/text_color_main" />
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="@dimen/_5dp"
-                    android:layout_marginEnd="@dimen/_5dp"
-                    android:fontFamily="@font/montserrat_medium"
-                    android:gravity="center"
-                    android:paddingEnd="@dimen/_20dp"
-                    android:text="Save"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/txt_16sp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
+                        android:id="@+id/progressBar"
+                        android:gravity="center">
+                        <ProgressBar
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/tvDataSaved"
+                        android:visibility="@{isLoading ? View.GONE : View.VISIBLE}"
+
+                        >
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="@dimen/_10dp"
+                            android:src="@android:drawable/stat_sys_download"
+                            app:tint="@color/text_color_main" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginStart="@dimen/_5dp"
+                            android:layout_marginEnd="@dimen/_5dp"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:gravity="center"
+                            android:paddingEnd="@dimen/_20dp"
+                            android:text="Save"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/txt_16sp" />
+                    </LinearLayout>
+                </FrameLayout>
+
+
+
+
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.core.widget.NestedScrollView
