--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -178,6 +178,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:padding="15dp"
+                        android:id="@+id/imgBarcode"
                         android:src="@drawable/barcode" />
                 </androidx.cardview.widget.CardView>
 
